[Feature] Decouple SeaTunnel Client and Server SEATUNNEL_HOME